Log warnings if sessions contain multiple cells per row